--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="pages/index.css">
   <title>Путешествия по России</title>
 </head>
-<body>
+<body class="body">
     <div class="page">
         <header class="header">
             <img class="header__logo" src="images/header-logo.svg" alt="Россия">
@@ -18,7 +18,7 @@
         <main>
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
-                <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img class="lead__image" src="images/lead-polka.jpg" alt="Полка">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
@@ -26,11 +26,11 @@
                 <h2 class="intro__title">Чего мы там не видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li>Часовых поясов 11</li>
-                    <li>Объектов природного наследия ЮНЕСКО 12</li>
-                    <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                    <li>Природных заповедников 105</li>
-                    <li>Аэропортов 241</li>
+                    <li class="intro__list-text">Часовых поясов<span class="intro__list-number"> 11</span></li>
+                    <li class="intro__list-text">Объектов природного наследия ЮНЕСКО<span class="intro__list-number"> 12</span></li>
+                    <li class="intro__list-text">Объектов культурного наследия ЮНЕСКО<span class="intro__list-number"> 16</span></li>
+                    <li class="intro__list-text">Природных заповедников<span class="intro__list-number"> 105</span></li>
+                    <li class="intro__list-text">Аэропортов<span class="intro__list-number"> 241</span></li>
                 </ul>
             </section>
             <section class="photo-grid">
@@ -94,7 +94,7 @@
                     <div class="places__text">
                     <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                     <p class="places__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
-                    </div>>
+                    </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Карелия</h2>
@@ -116,6 +116,7 @@
             </section>
         </main>
         <footer class="footer">
+            <nav>
             <ul class="footer__links">
                 <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
                 <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
@@ -123,6 +124,7 @@
                 <li class="footer__link-item"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
                 <li class="footer__link-item"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
             </ul>
+            </nav>
             <p class="footer__copyright">© 2020. Еленская Анастасия</p>
         </footer>
     </div>
